kubernetes/lb_1/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "test-ingress"
    kubernetes.io/ingress.class: "gce"
    # kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: example.net
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
